fix: [DEL-3570]: Fixed alignment issue in delegate listing (#8704)

--- a/src/modules/30-delegates/pages/delegates/DelegatesPage.module.scss
+++ b/src/modules/30-delegates/pages/delegates/DelegatesPage.module.scss
@@ -216,9 +216,3 @@
   justify-content: center;
   align-items: center;
 }
-
-.instancesColumn {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 50px !important;
-}
